--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 streamlit>=1.25.0
 ultralytics>=8.3.203
-opencv-python-headless==4.7.0.72
+opencv-python-headless>=4.12.0
 numpy>=1.24.0
-torch>=2.8.0
